--- a/1-tribute/index.html
+++ b/1-tribute/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tribute</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" async defer></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Tribute</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" async defer></script>
+
+  <div id="main">
+    <h1 id="title">Dr Sarah Croche</h1>
+    <div id="img-div">
+      <img id="image" src="https://pbs.twimg.com/profile_images/1061811832472530944/PmNH6TUp_400x400.jpg" />
+      <figcaption id="img-caption">
+        <p id="tribute-info">a duke. <small>we're not sure tho.</small></p>
+      </figcaption>
+      <a id="tribute-link" href="https://en.wikipedia.org/wiki/Waterfowl_hunting" target="_blank">more info. it's boring.
+        you're warned.</a>
+    </div>
+  </div>
+</body>
+
 </html>
